--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   },
   "dependencies": {
     "express": "^4.17.2",
-    "node-fetch": "^3.2.0"
+    "node-cron": "^3.0.0",
+    "node-fetch": "^3.2.0",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
